New views, basic signalR, auth

--- a/UMS.Web/Content/signin.css
+++ b/UMS.Web/Content/signin.css
@@ -12,6 +12,7 @@
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
+  text-align: center;
 }
 .form-signin .checkbox {
   font-weight: normal;
@@ -29,12 +30,18 @@
   z-index: 2;
 }
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
+  margin-bottom: 0px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+.btn{
+    margin-top: 10px
+}
+.field-validation-error{
+    color: red;
 }
