--- a/UMS.Web/Views/Dashboard/Index.cshtml
+++ b/UMS.Web/Views/Dashboard/Index.cshtml
@@ -2,7 +2,62 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-<div id="usersCount"></div>
-
+@Styles.Render("~/Content/dataTables")
+@Scripts.Render("~/bundles/signalR")
+@Scripts.Render("~/bundles/dataTables")
+<script src="/signalr/hubs" type="text/javascript"></script>
+<script>
+    $(function () {
+        // Reference the auto-generated proxy for the hub.
+        var userActivity = $.connection.userActivityHub;
+        // Create a function that the hub can call back to display messages.
+        userActivity.client.updateUsersOnlineCount = function (users) {
+            onlineUsersTable.clear();
+            onlineUsersTable.rows.add(users).draw();
+        };
+        $.connection.hub.start();
+        $('#logOutBtn').click(function () {
+            $.connection.hub.stop();
+        });
+    });
+</script>
+<h2>Dostępni użytkownicy</h2>
+<table id="onlineUsersTable" class="table table-striped table-bordered table-hover">
+    <thead>
+        <tr>
+            <th>Imie</th>
+            <th>Nazwisko</th>
+            <th>Email</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+<script>
+    $(document).ready(function () {
+        onlineUsersTable = $('#onlineUsersTable').DataTable({
+            data: new Object(),
+            columns: [
+                { data: "Email" },
+                { data: "FirstName" },
+                { data: "LastName" },
+                {
+                    data: "UserStatus",
+                    sortable: false,
+                    render: function (data, type, full) {
+                        if (full.UserStatus === 0) {
+                            return '<span class="label label-success">Online</span>';
+                        }
+                        else if (full.UserStatus === 1) {
+                            return '<span class="label label-default">Zajęty</span>';
+                        }
+                        else {
+                            return '<span class="label label-danger">Error</span>';
+                        }
+                    }
+                }
+            ],
+            language: { url: "../Scripts/dataTables/Polish.json" }
+        });
+    });
+</script>
