--- a/UMS.Web/Views/Dashboard/Index.cshtml
+++ b/UMS.Web/Views/Dashboard/Index.cshtml
@@ -2,25 +2,75 @@
 @{
     ViewBag.Title = "Index";
 }
-@Styles.Render("~/Content/dataTables")
+@Styles.Render("~/Content/dataTablesStyles")
 @Scripts.Render("~/bundles/signalR")
-@Scripts.Render("~/bundles/dataTables")
+@Scripts.Render("~/bundles/dataTablesScripts")
 <script src="/signalr/hubs" type="text/javascript"></script>
 <script>
     $(function () {
         // Reference the auto-generated proxy for the hub.
-        var userActivity = $.connection.userActivityHub;
+        userActivity = $.connection.userActivityHub;
         // Create a function that the hub can call back to display messages.
-        userActivity.client.updateUsersOnlineCount = function (users) {
+        userActivity.client.updateUsersOnline = function (users) {
+            var userEmail = "@HttpContext.Current.User.Identity.Name";
+            for (var i = 0; i < users.length; ++i) {
+                if (users[i].Email === userEmail) {
+                    users.splice(i, 1);
+                }
+            }
             onlineUsersTable.clear();
             onlineUsersTable.rows.add(users).draw();
         };
+        userActivity.client.incommingCall = function(sourceUser, offer){
+            yourConn.setRemoteDescription(new RTCSessionDescription(offer));
+
+            //create an answer to an offer 
+            yourConn.createAnswer(function (answer) {
+                yourConn.setLocalDescription(answer);
+                userActivity.server.answerUser(sourceUser.Email, answer);
+            }, function (error) {
+                alert("Error when creating an answer");
+            });
+        }
+        userActivity.client.incommingAnswer = function (answeringUser, answer) {
+            yourConn.setRemoteDescription(new RTCSessionDescription(answer));
+        }
+        userActivity.client.incommingCandidate = function (candidate) {
+            yourConn.addIceCandidate(new RTCIceCandidate(candidate));
+        }
         $.connection.hub.start();
         $('#logOutBtn').click(function () {
             $.connection.hub.stop();
         });
+        navigator.webkitGetUserMedia({ video: true, audio: true }, function (myStream) {
+            stream = myStream;
+            //using Google public stun server 
+            var configuration = {
+                "iceServers": [{ "url": "stun:stun2.1.google.com:19302" }]
+            };
+            yourConn = new webkitRTCPeerConnection(configuration);
+            yourConn.addStream(stream);
+            var remoteVideo = document.querySelector('#remoteVideo');
+            yourConn.onaddstream = function (e) {
+                remoteVideo.src = window.URL.createObjectURL(e.stream);
+            };
+            yourConn.onicecandidate = function (event) {
+                if (event.candidate) {
+                    userActivity.server.sendCandidate(event.candidate);
+                }
+            };
+        }, function () { console.warn("Error getting audio stream from getUserMedia") });
     });
+    function callUser(email) {
+        yourConn.createOffer(function (offer) {
+            userActivity.server.callUser(email, offer);
+            yourConn.setLocalDescription(offer);
+        }, function (error) {
+            alert("Error when creating an offer");
+        });
+    }
 </script>
+<video id="remoteVideo" autoplay></video>
 <h2>Dostępni użytkownicy</h2>
 <table id="onlineUsersTable" class="table table-striped table-bordered table-hover">
     <thead>
@@ -28,7 +78,7 @@
             <th>Imie</th>
             <th>Nazwisko</th>
             <th>Email</th>
-            <th>Status</th>
+            <th>Akcja</th>
         </tr>
     </thead>
     <tbody></tbody>
@@ -38,21 +88,21 @@
         onlineUsersTable = $('#onlineUsersTable').DataTable({
             data: new Object(),
             columns: [
-                { data: "Email" },
                 { data: "FirstName" },
                 { data: "LastName" },
+                { data: "Email" },
                 {
                     data: "UserStatus",
                     sortable: false,
                     render: function (data, type, full) {
                         if (full.UserStatus === 0) {
-                            return '<span class="label label-success">Online</span>';
+                            return '<button class="btn btn-sm btn-success" type="button" onclick="callUser(\'' + full.Email + '\')">Zadzwoń</button>';
                         }
                         else if (full.UserStatus === 1) {
                             return '<span class="label label-default">Zajęty</span>';
                         }
                         else {
-                            return '<span class="label label-danger">Error</span>';
+                            return '<span class="label label-danger">Błąd</span>';
                         }
                     }
                 }
